2002-09-29  Pascal Obry  <p.obry@wanadoo.fr>

	* turl.out:
	Fix output, better error message.

2002-09-25  Pascal Obry  <p.obry@wanadoo.fr>

	* auth.adb:
	Minor reformatting.

	* moved.adb:
	Minor reformatting.

2002-09-25  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* moved.adb, moved.out:
	Initial revision. Testing that AWS.Client not understanding
	body of message as a next header.	

	* auth.adb, auth.out:
	Initial revision. Testing Basic and Digest authentication.

	* makefile:
	Add moved regression test.
	Add auth regression test.

2002-09-18  Pascal Obry  <p.obry@wanadoo.fr>

	* soap3.adb, soap3.out:
	Initial revision.

	* makefile:
	Add soap3 regression test. Test for null SOAP-ENC:base64 and null
	 string. Also check name space handling.

	* soap1.out:
	Fix to use the right name space.

	* test_soap.adb:
	(Request): Set the SOAPAction.

2002-08-02  Pascal Obry  <p.obry@wanadoo.fr>

	* tc_soap_names.adb:
	Use "-" to access object in an Object_Safe_Pointer.

	* makefile:
	(test_soap): New regression test. Integrate it.

	* test_speed.adb:
	Use a named number for the iteration number.

	* test_soap.adb, test_soap.out:
	Initial revision.

2002-07-31  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Add test_speed test.

	* test_speed.adb, test_speed.out:
	Initial revision.

2002-07-15  Pascal Obry  <p.obry@wanadoo.fr>

	* turl.out:
	Update output.

	* turl.adb:
	Add tests for URL's parameters.

2002-07-09  Pascal Obry  <p.obry@wanadoo.fr>

	* unexph.adb:
	Minor reformatting.

2002-07-09  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* unexph.adb, unexph.out:
	Initial revision.

2002-07-03  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(clean): Removes uploaded files.

	* upload.adb:
	Allow only 5 seconds to the server.

	* upload.out:
	Initial revision.

	* makefile:
	(.SILENT): Add upload.
	(rt_std): Add upload.
	(upload): New target.
	(checks): Add check for upload.

	* upload.adb:
	Initial revision. (test file upload).
